# aoc2025

./: .aocbench.yml  .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs
