[package]
name = "aoc2025"
description = "Advent of Code 2025 in Rust"
authors = ["Robert Blenkinsopp <robert@blenkinsopp.net>"]
version = "0.2.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
incremental = false
strip = "symbols"
panic = "abort"

[dependencies]
atoi = "2.0.0"
memmap2 = "0.9.9"
memchr = "2.7.6"
argminmax = "0.6.3"
union-find = "0.4.3"
rayon = "1.11.0"
itertools = "0.14.0"
good_lp = {  version = "1.14.2", default-features = false, features = ["microlp"] }

[dev-dependencies]
indoc = "2.0.7"
